// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipButton renders disabled TooltipButton 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayHide={150}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="some-id"
      placement="right"
    >
      some-text
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="tooltip-button-helper"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      disabled={true}
      ouiaId="tooltip-disabled-button"
    >
      some-title
    </Button>
  </div>
</OverlayTrigger>
`;

exports[`TooltipButton renders disabled TooltipButton with renderedButton 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  delayHide={150}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="some-id"
      placement="right"
    >
      some-text
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="tooltip-button-helper"
  >
    some-render-button
  </div>
</OverlayTrigger>
`;

exports[`TooltipButton renders enabled TooltipButton 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  disabled={false}
  ouiaId="tooltip-button"
>
  some-title
</Button>
`;

exports[`TooltipButton renders enabled TooltipButton with renderedButton 1`] = `"some-render-button"`;

exports[`TooltipButton renders minimal TooltipButton 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  disabled={false}
  ouiaId="tooltip-button"
/>
`;
